nginx-ingress/lb-cilium/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-satish
spec:
  controller: k8s.io/ingress-nginx
